<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:paddingBottom="5dp"
    android:paddingTop="5dp">

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/btn_pair"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="15dp"
        android:backgroundTint="@color/starHard"
        android:text="@string/pair"
        android:textColor="@color/colorPrimaryDark"
        app:bootstrapSize="lg"
        app:buttonMode="regular"
        app:roundedCorners="true" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/btn_pair"
        android:layout_marginLeft="5dp"
        android:layout_toStartOf="@+id/btn_pair"
        android:background="@color/starHard"
        android:text="@string/moto_e2"
        android:textColor="#000000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btn_pair"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="5dp"
        android:layout_toStartOf="@+id/btn_pair"
        android:background="@color/starHard"
        android:text="@string/_000000000"
        android:textColor="#000000" />

</RelativeLayout>